# disk_sync

./: CMakeLists.txt  README.md  algorithm flowchart.dia  config.cpp  config.h  hash_thread.cpp  hash_thread.h  make_hash_index  progress_thread.cpp  speed_test_results.txt  sync_images.cpp  test_auto_thread_count.cpp  test_speed.sh  test_sync_images.py
lib/: block_device_size.cpp  block_device_size.h  config.cpp  config.h  hash_thread.cpp  immutable.cpp  immutable.h  progress_thread.h  sha512.cpp  sha512.h  sha512_digest.cpp  sha512_digest.h
tests/: get_file_size.cpp  sha512test  sha512test.c  test_auto_thread_count.cpp  test_block_device_size  test_block_device_size.cpp  test_ioctl.cpp  test_murmur_speed.cpp  test_murmur_speed_vs_thread.cpp  test_read_and_hash.cpp  test_read_device_file  test_read_device_file.cpp  test_sha512_lib  test_sha512_lib.cpp  test_sync_images.py  time_not_parallel  time_parallel.cpp
